All data coming from the API. Floors part fixed. Floorimage also now comes from the backend. Image stretched to 800px. Search bar now can navigate to an alert. But alertitem not getting focus.

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -324,7 +324,7 @@ body .content-dash .nav-container ul li {
 
 .floor-map {
     height: 475px;
-    width: auto;
+    width: 800px;
     margin-top: 67px;
     margin-left: 35px;
 }
